# defender

./: .gitignore  Cargo.toml  Makefile  PLAN.md  README.md  SPEC.md  sonar-project.properties
docs/: actor-architecture.md
examples/: actor-custom-attract.script  generate_readme_media.rs  generate_reference_candidate_media.rs
oldsrc/: README.md
src/: accepted.rs  actor_game.rs  actor_game_actor_helpers.rs  actor_game_actor_state.rs  actor_game_actors_effects.rs  actor_game_actors_hostile_motion.rs  actor_game_actors_hostile_projectiles.rs  actor_game_actors_hostiles.rs  actor_game_actors_lander.rs  actor_game_actors_lander_mutant.rs  actor_game_actors_mutant.rs  actor_game_actors_mutant_dive.rs  actor_game_actors_player.rs  actor_game_arcade_motion.rs  actor_game_arcade_state.rs  actor_game_attract_scoring.rs  actor_game_attract_scripts.rs  actor_game_behavior_scripts.rs  actor_game_behavior_sources.rs  actor_game_core.rs  actor_game_driver.rs  actor_game_fixed_point_motion.rs  actor_game_mutant_dive_patterns.rs  actor_game_mutant_dive_reference.rs  actor_game_protocol.rs  actor_game_reference_spawns.rs  actor_game_reference_state.rs  actor_game_render_bridge.rs  actor_game_runtime.rs  actor_game_runtime_state.rs  actor_game_spawn_blueprints.rs  actor_game_spawn_patterns.rs  actor_game_tests.rs  actor_game_tests_attract.rs  actor_game_tests_behavior.rs  actor_game_tests_bridge.rs  actor_game_tests_combat.rs  actor_game_tests_session.rs  actor_game_tests_sources.rs  actor_game_tests_support.rs  (+106 more)
src_legacy/: accepted_behavior.rs  app.rs  audio.rs  compatibility.rs  fidelity.rs  lib.rs  live.rs  machine.rs  machine_memory.rs  machine_process.rs  (+15 more)
(+99 files in other folders)
