[package]
name = "defender"
version = "0.1.0"
edition = "2024"
autobins = false
default-run = "defender"

[[bin]]
name = "defender"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
base64 = "0.22"
crossterm = "0.29"
libc = "0.2"
png = "0.18"
pollster = "0.4.0"
wgpu = "29.0.3"
winit = "0.30.13"

[dev-dependencies]
gif = "0.13"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage)'] }
