[package]
name = "defender"
version = "0.1.0"
edition = "2024"
autobins = false
default-run = "defender"

[features]
default = []
legacy-tools = ["dep:crossterm"]

[[bin]]
name = "defender"
path = "src/main.rs"

[[example]]
name = "generate_readme_media"
path = "examples/generate_readme_media.rs"
required-features = ["legacy-tools"]

[dependencies]
anyhow = "1.0"
bytemuck = { version = "1.25.0", features = ["derive"] }
cpal = "0.17.3"
crossterm = { version = "0.29", optional = true }
png = "0.18"
pollster = "0.4.0"
wgpu = "29.0.3"
winit = "0.30.13"

[dev-dependencies]
gif = "0.13"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage)'] }
